--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -1,5 +1,5 @@
 {
   "recess": {
-    "bootstrap.css": "components/bootstrap/less/bootstrap.less"
+    "bootstrap.css": "styles/bootstrap/main.less"
   }
 }
