Modify the watchers to use group and explicit targets.

--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -4,5 +4,13 @@
   },
   "sass": {
     "app.css": "styles/app.scss"
+  },
+  "watch": {
+    "less": {
+      "dirs": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"]
+    },
+    "sass": {
+      "dirs": ["app/styles/*.scss"]
+    }
   }
 }
