Shorter config, use a list of dirs directly.

--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -6,11 +6,7 @@
     "app.css": "styles/app.scss"
   },
   "watch": {
-    "less": {
-      "dirs": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"]
-    },
-    "sass": {
-      "dirs": ["app/styles/*.scss"]
-    }
+    "less": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"],
+    "sass": ["app/styles/*.scss"]
   }
 }
