Rev the cache of the component folder too. Change the name of the watch dest in the config file.

--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -6,7 +6,7 @@
     "app.css": "styles/app.scss"
   },
   "watch": {
-    "less": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"],
+    "recess": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"],
     "sass": ["app/styles/*.scss"]
   }
 }
