--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -8,5 +8,19 @@
   "watch": {
     "recess": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"],
     "sass": ["app/styles/*.scss"]
+  },
+  "dist": {
+    "files": [
+      "base.html",
+      "components/jquery/jquery.min.js",
+      "favicon.ico",
+      "fonts",
+      "images",
+      "robots.txt",
+      "scripts/ie.js",
+      "scripts/{{.AppName}}.js",
+      "styles/{{.AppName}}.css",
+      "views"
+    ]
   }
 }
