Compiled e2e tests are now working.

--- a/tasks/init/v0/templates/client/config.json
+++ b/tasks/init/v0/templates/client/config.json
@@ -19,6 +19,7 @@
       "robots.txt",
       "scripts/ie.js",
       "scripts/{{.AppName}}.js",
+      "scripts/test.js",
       "styles/{{.AppName}}.css",
       "views"
     ]
