--- a/tasks/init/v0/templates/queue.yaml
+++ b/tasks/init/v0/templates/queue.yaml
@@ -4,9 +4,12 @@ queue:
   rate: 5/m
   bucket_size: 10
   max_concurrent_requests: 10
+  retry_parameters:
+    min_backoff_seconds: 30
 
 - name: admin-mails
   rate: 10/h
   bucket_size: 1
   max_concurrent_requests: 1
-
+  retry_parameters:
+    min_backoff_seconds: 60
