--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -1,27 +1,14 @@
 {
-  "recess": {
-    "bootstrap.css": "styles/bootstrap/main.less"
+  "closure": {
+    "library": "~/projects/closure/closure-library",
+    "compiler": "~/projects/closure/closure-compiler",
+    "stylesheets": "~/projects/closure/closure-stylesheets",
+    "templates": "~/projects/closure/closure-templates"
   },
   "sass": {
     "app.css": "styles/app.scss"
   },
   "watch": {
-    "recess": ["app/components/bootstrap/less/*.less", "app/styles/bootstrap/*.less"],
-    "sass": ["app/styles/*.scss"]
-  },
-  "dist": {
-    "files": [
-      "base.html",
-      "components/jquery/jquery.min.js",
-      "favicon.ico",
-      "fonts",
-      "images",
-      "robots.txt",
-      "scripts/ie.js",
-      "scripts/{{.AppName}}.js",
-      "scripts/test.js",
-      "styles/{{.AppName}}.css",
-      "views"
-    ]
+    "sass": ["styles/*.scss"]
   }
 }
