Add SOY templates to the watched files and the server dependencies.

--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -9,6 +9,7 @@
     "app.css": "styles/app.scss"
   },
   "watch": {
-    "sass": ["styles/*.scss"]
+    "sass": ["styles/*.scss"],
+    "soy": ["templates/**/*.soy"]
   }
 }
