Add a JS file to the closure templates. Add a closurejs task to compile the JS files. Start the code to analyze the sources and generate a dependency tree.

--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -11,5 +11,8 @@
   "watch": {
     "sass": ["styles/*.scss"],
     "soy": ["templates/**/*.soy"]
+  },
+  "closurejs": {
+    "inputs": ["scripts/main.js"]
   }
 }
