Print the list of namespaces in the deps.js file. Load the dependencies when serving the compile component of the app.

--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -10,7 +10,8 @@
   },
   "watch": {
     "sass": ["styles/*.scss"],
-    "soy": ["templates/**/*.soy"]
+    "soy": ["templates/**/*.soy"],
+    "closurejs": ["scripts/**/*.js"]
   },
   "closurejs": {
     "inputs": ["scripts/main.js"]
