New gss task to compile the closure stylesheets.

--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -8,6 +8,9 @@
   "sass": {
     "app.css": "styles/app.scss"
   },
+  "gss": {
+    "styles.css": "app.css"
+  },
   "watch": {
     "sass": ["styles/*.scss"],
     "soy": ["templates/**/*.soy"],
