Prepare and commit the dist files in closure mode.

--- a/tasks/init/v0/templates/closure/config.json
+++ b/tasks/init/v0/templates/closure/config.json
@@ -47,5 +47,12 @@
     },
     "externs": [],
     "debug": false
+  },
+  "dist": {
+    "files": [
+      "scripts.js",
+      "styles.css",
+      "base.html"
+    ]
   }
 }
