Append templates to the JS file. Comment the views server stuff and don't deploy it.

--- a/tasks/init/v0/templates/angular/app.yaml
+++ b/tasks/init/v0/templates/angular/app.yaml
@@ -37,10 +37,12 @@ handlers:
   upload: static/styles/(.*)
   expiration: "20d"
 
-- url: /views/(.*)
-  static_files: static/views/\1
-  upload: static/views/(.*)
-  expiration: "20s"
+# Commented out because the templates are compiled
+# to the JS file. Uncomment if needed.
+# - url: /views/(.*)
+#   static_files: static/views/\1
+#   upload: static/views/(.*)
+#   expiration: "20s"
 
 - url: /favicon.ico
   static_files: static/favicon.ico
