Fix config file.

--- a/tasks/init/v0/templates/angular/client/config.json
+++ b/tasks/init/v0/templates/angular/client/config.json
@@ -20,7 +20,7 @@
       "scripts/ie.js",
       "scripts/{{ .AppName }}.js",
       "scripts/test.js",
-      "styles/{{ .AppName }}.css",
+      "styles/{{ .AppName }}.css"
     ]
   },
   "ngtemplates": {
