--- a/tasks/init/v0/templates/closure/config.yaml
+++ b/tasks/init/v0/templates/closure/config.yaml
@@ -1,63 +1,71 @@
 
 closure:
-  library: ~/projects/closure/closure-library
-  compiler: ~/projects/closure/closure-compiler
+  library:     ~/projects/closure/closure-library
+  compiler:    ~/projects/closure/closure-compiler
   stylesheets: ~/projects/closure/closure-stylesheets
-  templates: ~/projects/closure/closure-templates
+  templates:   ~/projects/closure/closure-templates
 
 sass:
-- source: styles/app.scss
-  dest: app.css
+  - source: styles/app.scss
+    dest:   app.css
 
 gss:
-- source: styles/app.css
-  dest: styles.css
+  - source: styles/app.css
+    dest:   styles.css
 
 watch:
-- task: sass
-  paths:
-  - styles/*.scss
-- task: soy
-  paths:
-  - templates/**/*.soy
-- task: closurejs
-  paths:
-  - scripts/**/*.js
+  - task: sass
+    paths:
+      - styles/*.scss
+
+  - task: soy
+    paths:
+      - templates/**/*.soy
+
+  - task: closurejs
+    paths:
+      - scripts/**/*.js
 
 closurejs:
   dest: scripts.js
   inputs:
-  - scripts/main.js
+    - scripts/main.js
+
   defines:
-  - name: goog.LOCALE
-    value: es
-  - name: goog.DEBUG
-    value: false
+    - name:  goog.LOCALE
+      value: es
+    - name:  goog.DEBUG
+      value: false
+
   compilationLevel: ADVANCED_OPTIMIZATIONS
   checks:
-    - ambiguousFunctionDecl
-    - checkRegExp
-    - checkTypes
-    - checkVars
-    - constantProperty
-    - deprecated
-    - fileoverviewTags
-    - internetExplorerChecks
-    - invalidCasts
-    - missingProperties
-    - nonStandardJsDocs
-    - strictModuleDepCheck
-    - typeInvalidation
-    - undefinedNames
-    - undefinedVars
-    - unknownDefines
-    - uselessCode
-    - globalThis
-    - duplicateMessage
+    error:
+      - ambiguousFunctionDecl
+      - checkRegExp
+      - checkTypes
+      - checkVars
+      - constantProperty
+      - deprecated
+      - fileoverviewTags
+      - internetExplorerChecks
+      - invalidCasts
+      - missingProperties
+      - nonStandardJsDocs
+      - strictModuleDepCheck
+      - typeInvalidation
+      - undefinedNames
+      - undefinedVars
+      - unknownDefines
+      - uselessCode
+      - globalThis
+      - duplicateMessage
+    warning:
+    off:
+
   externs:
   debug: false
 
 dist:
-- scripts/scripts.js
-- styles/styles.css
-- base.html
+  - scripts/scripts.js
+  - styles/styles.css
+  - base.html
