Remove /styles prefix from gss, sass & recess sources. Fixes issue #19.

--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -1,10 +1,10 @@
 
 recess:
-  - source: styles/bootstrap/main.less
+  - source: bootstrap/main.less
     dest:   bootstrap.css
 
 sass:
-  - source: styles/app.scss
+  - source: app.scss
     dest:   app.css
 
 watch:
