Use settings in the htmlmin task.

--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -31,6 +31,12 @@ cacherev:
     - views
     - base.html
 
+htmlmin:
+  - source: app/views
+    dest: temp/views
+  - source: temp/base.html
+    dest: temp/base.html
+
 dist:
   - base.html
   - components/jquery/jquery.min.js
