Use base settings in the compilejs task.

--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -1,6 +1,7 @@
 
-{{ if .ClientOnly }}clientonly: true
-{{end}}
+{{ if .ClientOnly }}clientonly: true{{end}}
+base: base.html
+
 recess:
   - source: bootstrap/main.less
     dest:   bootstrap.css
