Make the prepare_dist task obey settings.

--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -38,6 +38,9 @@ htmlmin:
   - source: temp/base.html
     dest: temp/base.html
 
+prepare_dist:
+  - app
+
 dist:
   - base.html
   - components/jquery/jquery.min.js
