Configurable deploy task. Fixes issue #22.

--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -1,6 +1,7 @@
 
-{{ if .ClientOnly }}clientonly: true{{end}}
-base: base.html
+{{ if .ClientOnly }}clientonly: true
+{{end}}base: base.html{{ if not .ClientOnly }}
+deploy: gae{{end}}
 
 recess:
   - source: bootstrap/main.less
