--- a/tasks/init/v0/templates/angular/client/bower.json
+++ b/tasks/init/v0/templates/angular/client/bower.json
@@ -4,10 +4,11 @@
   "dependencies": {
     "angular-bootstrap": "~0.3.0",
     "bootstrap": "~2.3.2",
+    "bootstrap-notify": "0.1.0",
     "bower-angular": "git@github.com:ernestokarim/bower-angular.git#~1.1.5",
     "es5-shim": "~2.0.5",
-    "json3": "~3.2.4",
-    "jquery": "#1.8.3"
+    "jquery": "#1.8.3",
+    "json3": "~3.2.4"
   },
   "devDependencies": {}
 }
