--- a/tasks/init/v0/templates/angular/client/config.yaml
+++ b/tasks/init/v0/templates/angular/client/config.yaml
@@ -55,6 +55,7 @@ dist:
   - scripts/ie.js
   - scripts/test.js
   - scripts/{{ .AppName }}.js
+  - static
   - styles/{{ .AppName }}.css
 
 ngtemplates:
