Ignore deploy & client folders.

--- a/tasks/init/v0/templates/angular/app.yaml
+++ b/tasks/init/v0/templates/angular/app.yaml
@@ -78,6 +78,8 @@ env_variables:
 # Avoid upload some backup and unused files
 skip_files:
 - old
+- deploy
+- client
 - ^(.*/)?app\.yaml
 - ^(.*/)?app\.yml
 - ^(.*/)?index\.yaml
