Update banned deploy paths list. Hash local when going to production (first step)

--- a/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
+++ b/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
@@ -70,6 +70,8 @@ deploy:
   mode: laravel
   exclude:
     - app/storage/**
+    - vendor/bin/**
+    - vendor/mockery/**
     - vendor/pdepend/**
     - vendor/phpmd/**
     - vendor/phpunit/**
