Upload only different files/folders (in content or perms). Remove files no longer present.

--- a/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
+++ b/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
@@ -79,5 +79,6 @@ deploy:
     - vendor/swiftmailer/swiftmailer/notes/**
     - vendor/swiftmailer/swiftmailer/test-suite/**
     - vendor/swiftmailer/swiftmailer/tests/**
+    - vendor/symfony/translation/Symfony/Component/Translation/Tests/**
 
 push: ftp.example.com 
