Ignore predis folder when pushing to production. Fix ngtemplate task to use several files.

--- a/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
+++ b/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
@@ -75,6 +75,7 @@ deploy:
     - vendor/pdepend/**
     - vendor/phpmd/**
     - vendor/phpunit/**
+    - vendor/predis/**
     - vendor/sebastian/**
     - vendor/swiftmailer/swiftmailer/notes/**
     - vendor/swiftmailer/swiftmailer/test-suite/**
