Add some more ignored folders.

--- a/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
+++ b/tasks/init/v0/templates/laravel/client/cbtmpl.config.yaml
@@ -70,6 +70,8 @@ deploy:
   mode: laravel
   exclude:
     - app/storage/**
+    - app/tests/**
+    - app/validators/**
     - vendor/bin/**
     - vendor/mockery/**
     - vendor/pdepend/**
